[project]
name = "l2025022-mipo-operationsystem-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onvif-zeep>=0.2.12",
    "opencv-python>=4.11.0.86",
    "redis>=6.2.0",
    "segment-anything",
    "shapely>=2.1.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.162",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
